# aircon_auto_system

./: .gitignore  readme.md
firmware/: CMakeLists.txt
firmware/main/: CMakeLists.txt  ir_controller.c  ir_controller.h  main.c  web_server.c  web_server.h  wifi_manager.c  wifi_manager.h
webserver/: env.example  package.json
webserver/public/: settings.html
webserver/src/: app.js
webserver/src/utils/: database.js  logger.js
